@@ -1,3 +1,8 @@
+2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* src/cd-drive.c: (linux_scan):
+	Fix devfs detection.
+
 2003-09-25  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extractor.c:
